--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -2093,9 +2093,9 @@ body {
   }
 }
 .animation {
-  animation: myAnim 1s ease 0s 1 normal forwards;
+  animation: animDashboard 1s ease 0s 1 normal forwards;
 }
-@keyframes myAnim {
+@keyframes animDashboard {
   0% {
     opacity: 0;
     transform: translateY(250px);
@@ -2106,6 +2106,21 @@ body {
     transform: translateY(0);
   }
 }
+.animation_validate {
+  animation: animValidate 1s ease 0s 1 normal forwards;
+}
+@keyframes animValidate {
+  0% {
+    opacity: 0;
+    transform: translateX(250px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .error {
   min-height: 100vh;
   width: 100%;
